myteo/test/analyze/type_check/assignment/basic.myte
module Test

fun main() {
  var x: Int = 1;
  x = 2;
  x = 3;
  x = ();
}